--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,14 +4,18 @@ on:
   push:
     branches:
       - 'main'
-    pull_request:
+  pull_request:
       branches:
         - 'main'
 
 jobs:
   hello:
+    runs-on: ubuntu-latest
 
-
-steps:
-  - name: Helllo step
-    run: echo "hello worlkd"
+  steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '14'
+    - run: npm install -g bats
+    - run: bats -v
