--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,8 +14,10 @@ jobs:
 
   steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-java@v3
       with:
-        node-version: '14'
-    - run: npm install -g bats
-    - run: bats -v
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Run the Maven verify phase
+      run: mvn --batch-mode --update-snapshots verify
+
