--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,15 +9,17 @@ on:
         - 'main'
 
 jobs:
-  hello:
+  tests:
     runs-on: ubuntu-latest
 
-  steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Run the Maven verify phase
-      run: mvn --batch-mode --update-snapshots verify
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Run the Maven verify phase
+        run: mvn --batch-mode --update-snapshots verify
+
+
 
