--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -20,9 +20,22 @@ jobs:
           distribution: 'temurin'
       - name: Run the Maven verify phase
         run: mvn --batch-mode --update-snapshots verify
+
+      - name: Send email
+        uses: daawidd6/action-send-mail@v3
         with:
-          name: code-coverage-report
-          path: code-coverage.html
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: omtest231123
+          password: OldMutual
+          subject: Automation
+          to: Luuyhisa@gmail.com
+          cc: Lungisa.mkhasakhasa@gmail.com
+          from: Github cumpus expect
+          html_body: file://temp.html
+          secure: true
+          ignore_cert: true
+          priority: low
 
 
 
