--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -32,7 +32,7 @@ jobs:
           to: Luuyhisa@gmail.com
           cc: Lungisa.mkhasakhasa@gmail.com
           from: Github cumpus expect
-          html_body: file://temp.html
+          html_body: file://README.md
           secure: true
           ignore_cert: true
           priority: low
