--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           server_address: smtp.gmail.com
           server_port: 465
-          username: omtest231123
+          username: omtest231123@gmail.com
           password: OldMutual
           subject: Automation
           to: Luuyhisa@gmail.com
